# 2d-particle-simulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
.github/workflows/: main.yml
src/: main.cpp
